# geo-viz-engine

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODOS.md  check_data.py  check_depth.html  convert_downloads.py  debug_links.py  debug_log.py  diff.txt  get_cmap.py  get_logs.py  package-lock.json  package.json  pyproject.toml  sample_paleo.geojson  test_calamine.py  test_coords.html  test_echarts.js  test_echarts_pixel.html  test_excel.py  test_fetch_file.py  test_linkage.py  test_linkage_2.py  test_loader.py  test_poly.py  test_render_js.py  test_seismic_import.py  test_sheet.py  test_volume.py  verify_ui.py
.cache/: Well_X_3f7ae476f009e4e821b7dac8ee684773.json  Well_X_3f7ae476f009e4e821b7dac8ee684773.pkl
.gstack/benchmark/: latest.md
.gstack/health/: latest.json
.gstack/qa-reports/: qa-report-geo-viz-engine-2026-05-11.md
.gstack/security-reports/: 2026-05-11-153000.json
data/: HZ25-10-1-laolong.xls  well_coordinates.example.json  well_coordinates.json
docs/: geoviz-well-log-package-guide.md  methodology-well-log-visualization.md  tech-verification-report.md
docs/releases/: v0.6.2.md
samples/: demo.xls
scratch/: test_wiggle_math.py
scripts/: build.py  build.sh  convert_coordinates.py  convert_xml_to_laolong.py  dev.sh
src/: app.py  main.py
src-echarts/: index.html  package-lock.json  package.json  vite.config.js
src-echarts/src/: main.js  (+1 more)
src-python/: pyproject.toml  requirements.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-web/: .env.development  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tests/: conftest.py  test_app.py  test_chart_engine.py  test_critical_gaps.py  test_curve_renderer.py  test_curve_track.py  test_interval_track.py  test_loaders.py  test_models.py  test_modules.py  test_paleo_loader.py  test_paleo_map.py  test_profile_vd.py  test_profile_widget.py  test_profile_wiggle.py  test_renderer_3d.py  test_seismic_cache.py  test_seismic_colormap.py  test_seismic_horizon.py  test_seismic_loader.py  test_seismic_models.py  test_seismic_view.py  test_tvdss_support.py  test_well_log_mapping.py
(+152 files in other folders)
