[project]
name = "geo-viz-engine"
version = "0.2.0"
description = "地质数据可视化桌面引擎"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
    "pyvista>=0.43",
    "lasio>=0.14",
    "segyio>=1.9",
    "pandas>=2.0",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "PyInstaller>=6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
