[project]
name = "geo-viz-engine"
version = "0.4.0"
description = "地质数据可视化桌面引擎"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyside6>=6.6",
    "pyqtgraph>=0.13",
    "pyvista>=0.43",
    "lasio>=0.14",
    "segyio>=1.9",
    "pandas>=2.0",
    "python-calamine>=0.2.0",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "pydantic>=2.0",
    "pytest-qt>=4.5.0",
    "geoviz-well-log",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "PyInstaller>=6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]

[tool.uv.workspace]
members = [
    "packages/geoviz_well_log",
]

[tool.uv.sources]
geoviz-well-log = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
