[package]
name = "geo-viz-engine"
version = "0.1.0"
description = "GeoViz Engine — Geological Data Visualization Desktop App"
authors = []
edition = "2021"

[lib]
name = "geo_viz_engine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
